refactor: 테스트 코드 추가 및 클래스 역할 분리 (#19)
* test: CountLengthCatefory 테스트 추가

* refactor: copyDoc 사용하도록 변경

* refactor: count를 계산하는 부분 수정

* test: SvgDocumentManipulator 테스트 코드 추가

* refactor: EmojiService의 로직 책임 분리

1. SvgDocument를 생성하는 로직 SvgDocumentFactory로 분리
2. EmojiRandomIndexGenerator에서 index의 범위 부분도 documentFactory로 이동
3. RandomNumberGenerator를 인터페이스로 분리

* test: SvgDocumentFactoryTest 추가

* test: HeartRepositoryConfig 테스트 코드 추가

* test: RedisConnectionCondition 테스트 코드 추가

* test: HeartRepository 테스트 코드를 추가한다.

* refactor: 잘못된 호출 수정

* refactor: 기본 생성자 추가 및 클래스 분리

* refactor: list 반환 메서드 수정

* test: RandomNumberGenerator 테스트 코드 추가

* test: member 테스트 코드 추가

* test: EmojiService 테스트 코드 추가

* style: final 키워드 추가

* test: 테스트 코드 불필요한 공백 제거 및 수정